--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         name: "Pull Day",
                         exercises: [
                             { name: "Pull-ups (or Lat Pulldowns)", sets: 3, effort: "Heavy (6-10 reps)", rest: "2-3 minutes", logs: Array.from({ length: 3 }, () => ({ weight: '', reps: '', done: false })) },
-                            { name: "Barbell or Dumbbell Rows", sets: 3, effort: "Heavy (6-10 reps)", rest: "2-3 minutes", logs: Array.from({ length: 3 }, () => ({ weight: '', reps: '', done: false })) },
+                            { name: "Barbell Rows", sets: 3, effort: "Heavy (6-10 reps)", rest: "2-3 minutes", logs: Array.from({ length: 3 }, () => ({ weight: '', reps: '', done: false })) },
                             { name: "Face Pulls", sets: 4, effort: "Light (15-20 reps)", rest: "60 seconds", logs: Array.from({ length: 4 }, () => ({ weight: '', reps: '', done: false })) },
                             { name: "Dumbbell or Barbell Curls", sets: 4, effort: "Moderate (8-12 reps)", rest: "90 seconds", logs: Array.from({ length: 4 }, () => ({ weight: '', reps: '', done: false })) },
                         ],
